# agent-chat-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
backend/eval/: compare.py  judge.py  live_runner.py  regression_runner.py  report.py  report_html.py  runner.py  smoke_runner.py
backend/eval/artifacts-smoke/: report.html  report.json  summary.json
backend/eval/artifacts-smoke/smoke_chat_basic/: events.jsonl  result.json
backend/eval/artifacts-smoke/smoke_chat_english/: events.jsonl  result.json
backend/eval/artifacts-smoke/smoke_chat_longer/: events.jsonl  result.json
backend/eval/cases/: examples_extended.yaml  interview_reliability.yaml  interview_reliability_smoke.yaml  mcp_notes.yaml  memory.yaml  multi_step.yaml  news.yaml  pdf_rag.yaml  search.yaml  smoke.yaml  weather.yaml  webpage.yaml
backend/eval/scorers/: rule_scorer.py
backend/src/agent_chat/: config.py  main.py
backend/src/agent_chat/api/: approvals.py  (+10 more)
backend/src/mcp_notes/: __init__.py  __main__.py  server.py
backend/tests/: conftest.py  test_security.py
backend/tests/smoke/: test_smoke.py
backend/tests/unit/: test_auth_middleware.py  test_command_tool.py  test_compare.py  test_eval.py  test_executor_guard.py  test_factory.py  test_file_store.py  test_github_oauth.py  test_ingest_webpage.py  test_jwt.py  test_kb.py  test_live_runner.py  test_mcp.py  test_multi_step.py  test_repository.py  test_rule_scorer.py  test_schemas.py  test_smoke_runner.py  test_tool_registry.py  test_trace_signals.py
(+73 files in other folders)
