[project]
name = "agent-chat"
version = "0.1.0"
description = "AI Agent Chat Platform"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "motor>=3.6.0",
    "aiofiles>=24.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "structlog>=25.0.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.9.0",
    "pymupdf4llm>=0.0.17",
    "python-multipart>=0.0.18",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
    "mongomock-motor>=0.0.20",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
